stop the animation when the main window is about to be closed.

Stopping the animation avoids a crash, because the animation is a
singleton. If it is a variable of the mainwindow, then it will be
stopped/deleted before the mainwindow is deleted.

BUG: 325126
FIXED-IN: KDE/4.11.4 KDE/4.12